# Computational_math

./: CMakeLists.txt
constants_calculation/: main  main.cpp
include/: convection_diffusion_problem.h  schemes.h  solver.h
src/: convection_diffusion_problem.cpp  main.cpp  schemes.cpp  solver.cpp
